Issue #13218 - Replace new deploy pre-ContextHandler init for ClassLoaderFactory model