@@ -90,7 +90,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>@{argLine} ${jetty.surefire.argLine}
-            --add-modules org.eclipse.jetty.jmx
             --add-reads org.eclipse.jetty.deploy=org.eclipse.jetty.http
             --add-reads org.eclipse.jetty.deploy=org.eclipse.jetty.logging</argLine>
         </configuration>
